// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DL 1`] = `
<dl
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render DT 1`] = `
<dt
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render FigCaption 1`] = `
<figcaption
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render Image 1`] = `
<img
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render LI 1`] = `
<li
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render OL 1`] = `
<ol
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render TBody 1`] = `
<tbody
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render TD 1`] = `
<td
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render TH 1`] = `
<th
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render THead 1`] = `
<thead
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render TR 1`] = `
<tr
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render Text 1`] = `
<p
  className="sc-bdVaJa hWfMWJ"
/>
`;

exports[`should render TextArea 1`] = `
<textarea
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render UL 1`] = `
<ul
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render a 1`] = `
<a
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render abbr 1`] = `
<abbr
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render address 1`] = `
<address
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render area 1`] = `
<area
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render article 1`] = `
<article
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render aside 1`] = `
<aside
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render audio 1`] = `
<audio
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render b 1`] = `
<b
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render base 1`] = `
<base
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render bdi 1`] = `
<bdi
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render bdo 1`] = `
<bdo
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render blockquote 1`] = `
<blockquote
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render body 1`] = `
<body
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render br 1`] = `
<br
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render button 1`] = `
<button
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render canvas 1`] = `
<canvas
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render caption 1`] = `
<caption
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render cite 1`] = `
<cite
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render code 1`] = `
<code
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render col 1`] = `
<col
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render colgroup 1`] = `
<colgroup
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render data 1`] = `
<data
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render datalist 1`] = `
<datalist
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render dd 1`] = `
<dd
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render del 1`] = `
<del
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render details 1`] = `
<details
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render dfn 1`] = `
<dfn
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render dialog 1`] = `
<dialog
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render div 1`] = `
<div
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render dl 1`] = `
<dl
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render dt 1`] = `
<dt
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render em 1`] = `
<em
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render embed 1`] = `
<embed
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render fieldset 1`] = `
<fieldset
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render figcaption 1`] = `
<figcaption
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render figure 1`] = `
<figure
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render footer 1`] = `
<footer
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render form 1`] = `
<form
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h1 1`] = `
<h1
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h2 1`] = `
<h2
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h3 1`] = `
<h3
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h4 1`] = `
<h4
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h5 1`] = `
<h5
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render h6 1`] = `
<h6
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render head 1`] = `
<head
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render header 1`] = `
<header
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render hgroup 1`] = `
<hgroup
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render hr 1`] = `
<hr
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render html 1`] = `
<html
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render i 1`] = `
<i
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render iframe 1`] = `
<iframe
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render img 1`] = `
<img
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render input 1`] = `
<input
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render ins 1`] = `
<ins
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render kbd 1`] = `
<kbd
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render keygen 1`] = `
<keygen
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render label 1`] = `
<label
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render legend 1`] = `
<legend
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render li 1`] = `
<li
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render link 1`] = `
<link
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render main 1`] = `
<main
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render map 1`] = `
<map
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render mark 1`] = `
<mark
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render math 1`] = `
<math
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render menu 1`] = `
<menu
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render menuitem 1`] = `
<menuitem
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render meta 1`] = `
<meta
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render meter 1`] = `
<meter
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render nav 1`] = `
<nav
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render noscript 1`] = `
<noscript
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render object 1`] = `
<object
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render ol 1`] = `
<ol
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render optgroup 1`] = `
<optgroup
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render option 1`] = `
<option
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render output 1`] = `
<output
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render p 1`] = `
<p
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render param 1`] = `
<param
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render picture 1`] = `
<picture
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render pre 1`] = `
<pre
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render progress 1`] = `
<progress
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render q 1`] = `
<q
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render rb 1`] = `
<rb
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render rp 1`] = `
<rp
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render rt 1`] = `
<rt
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render rtc 1`] = `
<rtc
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render ruby 1`] = `
<ruby
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render s 1`] = `
<s
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render samp 1`] = `
<samp
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render script 1`] = `
<script
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render section 1`] = `
<section
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render select 1`] = `
<select
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render slot 1`] = `
<slot
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render small 1`] = `
<small
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render source 1`] = `
<source
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render span 1`] = `
<span
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render strong 1`] = `
<strong
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render style 1`] = `
<style
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render sub 1`] = `
<sub
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render summary 1`] = `
<summary
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render sup 1`] = `
<sup
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render svg 1`] = `
<svg
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render table 1`] = `
<table
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render tbody 1`] = `
<tbody
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render td 1`] = `
<td
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render template 1`] = `
<template
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render textarea 1`] = `
<textarea
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render tfoot 1`] = `
<tfoot
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render th 1`] = `
<th
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render thead 1`] = `
<thead
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render time 1`] = `
<time
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render title 1`] = `
<title
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render tr 1`] = `
<tr
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render track 1`] = `
<track
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render u 1`] = `
<u
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render ul 1`] = `
<ul
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render var 1`] = `
<var
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render video 1`] = `
<video
  className="sc-bdVaJa iHZvIS"
/>
`;

exports[`should render wbr 1`] = `
<wbr
  className="sc-bdVaJa iHZvIS"
/>
`;
